[package]
name = "casoprap-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.37"
poem-openapi = { version = "2", features = ["swagger-ui", "openapi-explorer"]}
poem = "1"

sqlx = { version = "0.6.0", features = ["runtime-tokio-rustls", "sqlite", "mysql"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
serde_json = "1.0.113"
serde = "1.0.196"
anyhow = "1.0.80"
